# work1_update

./: pyproject.toml
articles/: 200和400地图生成要求.md  CROWN-BPC最小精确实现.md  CROWN-MCPP实现审计矩阵.md  CROWN-全地图直接运行与规模实验.md  all_commands_reference.md  多智能体核心算法.md  多智能体顶刊核心算法.md
backups/code_snapshot_20260601_234502_before_multi_entry_exit_region_tsp_cpp/: backup_manifest.json
backups/code_snapshot_20260602_121146_before_residual_tsp_mapf_timeline_fix/: backup_manifest.json  pyproject.toml
backups/code_snapshot_20260602_222241_before_50x50_planner_optimization/: backup_manifest.json
backups/current_code_20260630_200336/: git_head.txt  (+2 more)
examples/: closed_loop_simulation.py  heterogeneous_fleet_profile_200x200.json  path_planning_layer_demo.py  run_crown_map_suite.py  run_crown_mcpp_experiment.py  run_crown_minimal_exact.py
outputs/: crown_all_maps_current_summary.json  crown_map_suite_10_20_timing_final_report.json  crown_map_suite_10_report.json  crown_map_suite_15_current_report.json  crown_map_suite_20_final_report.json  crown_map_suite_50_final_current_report.json  crown_map_suite_large_budget60_current_report.json  crown_map_suite_large_current_report.json  crown_map_suite_small_final_current_report.json  crown_map_suite_small_latest_report.json  crown_map_suite_small_report.json  crown_map_suite_small_timing_final_report.json
plans/: usv_obstacle_map_full_coverage_completion_plan.md  usv_swarm_full_coverage_dual_model_mapf_cbf_rvo2_nmpc.md
tests/: test_crown_full.py  test_crown_map_regression.py  test_crown_mcpp.py  test_framework.py  test_path_planning_layer.py
(+279 files in other folders)
